--- a/ArtistScraper/mainwindow.ui
+++ b/ArtistScraper/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>638</width>
-    <height>448</height>
+    <height>477</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -105,11 +105,11 @@
       <x>10</x>
       <y>120</y>
       <width>621</width>
-      <height>281</height>
+      <height>271</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
@@ -610,6 +610,32 @@
     <property name="text">
      <string>Current Keyword:</string>
     </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>400</y>
+      <width>611</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label_Curl_Status">
+       <property name="text">
+        <string>Status:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_App_Status_2">
+       <property name="text">
+        <string>Items Found:</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
