added curl status, and proxy error status to gui label, and added items found that shows amount of emails found

--- a/ArtistScraper/mainwindow.ui
+++ b/ArtistScraper/mainwindow.ui
@@ -488,23 +488,23 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>350</x>
+        <x>360</x>
         <y>20</y>
-        <width>81</width>
-        <height>16</height>
+        <width>71</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>Proxy Server</string>
+       <string>HTTP Proxy</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>350</x>
+        <x>360</x>
         <y>50</y>
-        <width>61</width>
-        <height>16</height>
+        <width>51</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="text">
@@ -601,9 +601,9 @@
    <widget class="QLabel" name="label_Current_Keyword">
     <property name="geometry">
      <rect>
-      <x>416</x>
+      <x>346</x>
       <y>80</y>
-      <width>201</width>
+      <width>271</width>
       <height>20</height>
      </rect>
     </property>
@@ -611,31 +611,31 @@
      <string>Current Keyword:</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QLabel" name="label_Curl_Status">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>400</y>
-      <width>611</width>
-      <height>16</height>
+      <x>11</x>
+      <y>391</y>
+      <width>291</width>
+      <height>21</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="label_Curl_Status">
-       <property name="text">
-        <string>Status:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_App_Status_2">
-       <property name="text">
-        <string>Items Found:</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <property name="text">
+     <string>Status</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_Items_Found">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>390</y>
+      <width>131</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Items Found</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
