--- a/ArtistScraper/mainwindow.ui
+++ b/ArtistScraper/mainwindow.ui
@@ -109,7 +109,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
@@ -128,7 +128,7 @@
      <widget class="QPushButton" name="pushButton_Save">
       <property name="geometry">
        <rect>
-        <x>450</x>
+        <x>10</x>
         <y>220</y>
         <width>61</width>
         <height>21</height>
@@ -136,6 +136,45 @@
       </property>
       <property name="text">
        <string>Save</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_Next_Email_Pagination">
+      <property name="geometry">
+       <rect>
+        <x>539</x>
+        <y>220</y>
+        <width>61</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Next</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_Previous_Email_Pagination">
+      <property name="geometry">
+       <rect>
+        <x>470</x>
+        <y>220</y>
+        <width>61</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Previous</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_Delete_Emails">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>220</y>
+        <width>91</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Remove Emails</string>
       </property>
      </widget>
     </widget>
@@ -153,7 +192,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Delete Keywords</string>
+       <string>Remove Keywords</string>
       </property>
      </widget>
      <widget class="QTableWidget" name="tableWidget_Keywords_Queue">
@@ -570,19 +609,6 @@
        <string>Delete Proxy</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_Load_Proxies">
-      <property name="geometry">
-       <rect>
-        <x>270</x>
-        <y>180</y>
-        <width>80</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>PushButton</string>
-      </property>
-     </widget>
     </widget>
    </widget>
    <widget class="Line" name="line_2">
@@ -648,6 +674,19 @@
     </property>
     <property name="text">
      <string>Items Found</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_Keyword_List_File_Location">
+    <property name="geometry">
+     <rect>
+      <x>452</x>
+      <y>40</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
